pyttern/antlr/python/Python3Parser.py
<<<<<<< HEAD:pyttern/antlr/python/Python3Parser.py
# Generated from Python3Parser.g4 by ANTLR 4.7.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *
from typing.io import TextIO

if __name__ is not None and "." in __name__:
    from .Python3ParserBase import Python3ParserBase
else:
    from Python3ParserBase import Python3ParserBase


class Python3Parser ( Python3ParserBase ):

    grammarFileName = "Python3Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'and'", "'as'", "'assert'", 
                     "'async'", "'await'", "'break'", "'case'", "'class'", 
                     "'continue'", "'def'", "'del'", "'elif'", "'else'", 
                     "'except'", "'False'", "'finally'", "'for'", "'from'", 
                     "'global'", "'if'", "'import'", "'in'", "'is'", "'lambda'", 
                     "'match'", "'None'", "'nonlocal'", "'not'", "'or'", 
                     "'pass'", "'raise'", "'return'", "'True'", "'try'", 
                     "'_'", "'while'", "'with'", "'yield'", "'strict'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'.'", "'...'", "'*'", "'('", 
                     "')'", "','", "':'", "';'", "'**'", "'='", "'['", "']'", 
                     "'|'", "'^'", "'&'", "'<<'", "'>>'", "'+'", "'-'", 
                     "'/'", "'%'", "'//'", "'~'", "'{'", "'}'", "'<'", "'>'", 
                     "'=='", "'>='", "'<='", "'<>'", "'!='", "'@'", "'->'", 
                     "'+='", "'-='", "'*='", "'@='", "'/='", "'%='", "'&='", 
                     "'|='", "'^='", "'<<='", "'>>='", "'**='", "'//='", 
                     "'?'", "'?!['" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "STRING", "NUMBER", 
                      "INTEGER", "AND", "AS", "ASSERT", "ASYNC", "AWAIT", 
                      "BREAK", "CASE", "CLASS", "CONTINUE", "DEF", "DEL", 
                      "ELIF", "ELSE", "EXCEPT", "FALSE", "FINALLY", "FOR", 
                      "FROM", "GLOBAL", "IF", "IMPORT", "IN", "IS", "LAMBDA", 
                      "MATCH", "NONE", "NONLOCAL", "NOT", "OR", "PASS", 
                      "RAISE", "RETURN", "TRUE", "TRY", "UNDERSCORE", "WHILE", 
                      "WITH", "YIELD", "STRICT", "NEWLINE", "NAME", "STRING_LITERAL", 
                      "BYTES_LITERAL", "DECIMAL_INTEGER", "OCT_INTEGER", 
                      "HEX_INTEGER", "BIN_INTEGER", "FLOAT_NUMBER", "IMAG_NUMBER", 
                      "DOT", "ELLIPSIS", "STAR", "OPEN_PAREN", "CLOSE_PAREN", 
                      "COMMA", "COLON", "SEMI_COLON", "POWER", "ASSIGN", 
                      "OPEN_BRACK", "CLOSE_BRACK", "OR_OP", "XOR", "AND_OP", 
                      "LEFT_SHIFT", "RIGHT_SHIFT", "ADD", "MINUS", "DIV", 
                      "MOD", "IDIV", "NOT_OP", "OPEN_BRACE", "CLOSE_BRACE", 
                      "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", "LT_EQ", 
                      "NOT_EQ_1", "NOT_EQ_2", "AT", "ARROW", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MULT_ASSIGN", "AT_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", 
                      "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", "POWER_ASSIGN", 
                      "IDIV_ASSIGN", "WILDCARD", "SYNTAX_STRICT_START", 
                      "SKIP_", "UNKNOWN_CHAR" ]

    RULE_single_input = 0
    RULE_file_input = 1
    RULE_eval_input = 2
    RULE_decorator = 3
    RULE_decorators = 4
    RULE_decorated = 5
    RULE_async_funcdef = 6
    RULE_funcdef = 7
    RULE_parameters = 8
    RULE_tfpdef = 9
    RULE_varargslist = 10
    RULE_vfpdef = 11
    RULE_stmt = 12
    RULE_simple_stmts = 13
    RULE_simple_stmt = 14
    RULE_expr_stmt = 15
    RULE_annassign = 16
    RULE_testlist_star_expr = 17
    RULE_augassign = 18
    RULE_del_stmt = 19
    RULE_pass_stmt = 20
    RULE_flow_stmt = 21
    RULE_break_stmt = 22
    RULE_continue_stmt = 23
    RULE_return_stmt = 24
    RULE_yield_stmt = 25
    RULE_raise_stmt = 26
    RULE_import_stmt = 27
    RULE_import_name = 28
    RULE_import_from = 29
    RULE_import_as_name = 30
    RULE_dotted_as_name = 31
    RULE_import_as_names = 32
    RULE_dotted_as_names = 33
    RULE_dotted_name = 34
    RULE_global_stmt = 35
    RULE_nonlocal_stmt = 36
    RULE_assert_stmt = 37
    RULE_compound_stmt = 38
    RULE_async_stmt = 39
    RULE_if_stmt = 40
    RULE_while_stmt = 41
    RULE_for_stmt = 42
    RULE_try_stmt = 43
    RULE_with_stmt = 44
    RULE_with_item = 45
    RULE_except_clause = 46
    RULE_block = 47
    RULE_match_stmt = 48
    RULE_subject_expr = 49
    RULE_star_named_expressions = 50
    RULE_star_named_expression = 51
    RULE_case_block = 52
    RULE_guard = 53
    RULE_patterns = 54
    RULE_pattern = 55
    RULE_as_pattern = 56
    RULE_or_pattern = 57
    RULE_closed_pattern = 58
    RULE_literal_pattern = 59
    RULE_literal_expr = 60
    RULE_complex_number = 61
    RULE_signed_number = 62
    RULE_signed_real_number = 63
    RULE_real_number = 64
    RULE_imaginary_number = 65
    RULE_capture_pattern = 66
    RULE_pattern_capture_target = 67
    RULE_wildcard_pattern = 68
    RULE_value_pattern = 69
    RULE_attr = 70
    RULE_name_or_attr = 71
    RULE_group_pattern = 72
    RULE_sequence_pattern = 73
    RULE_open_sequence_pattern = 74
    RULE_maybe_sequence_pattern = 75
    RULE_maybe_star_pattern = 76
    RULE_star_pattern = 77
    RULE_mapping_pattern = 78
    RULE_items_pattern = 79
    RULE_key_value_pattern = 80
    RULE_double_star_pattern = 81
    RULE_class_pattern = 82
    RULE_positional_patterns = 83
    RULE_keyword_patterns = 84
    RULE_keyword_pattern = 85
    RULE_test = 86
    RULE_test_nocond = 87
    RULE_lambdef = 88
    RULE_lambdef_nocond = 89
    RULE_or_test = 90
    RULE_and_test = 91
    RULE_not_test = 92
    RULE_comparison = 93
    RULE_comp_op = 94
    RULE_star_expr = 95
    RULE_expr = 96
    RULE_atom_expr = 97
    RULE_atom = 98
    RULE_name = 99
    RULE_testlist_comp = 100
    RULE_trailer = 101
    RULE_subscriptlist = 102
    RULE_subscript_ = 103
    RULE_sliceop = 104
    RULE_exprlist = 105
    RULE_testlist = 106
    RULE_dictorsetmaker = 107
    RULE_classdef = 108
    RULE_arglist = 109
    RULE_argument = 110
    RULE_comp_iter = 111
    RULE_comp_for = 112
    RULE_comp_if = 113
    RULE_encoding_decl = 114
    RULE_yield_expr = 115
    RULE_yield_arg = 116
    RULE_strings = 117
    RULE_wildcard_type = 118
    RULE_wildcard_number = 119
    RULE_stmt_wildcard = 120
    RULE_expr_wildcard = 121
    RULE_atom_wildcard = 122
    RULE_simple_wildcard = 123
    RULE_double_wildcard = 124
    RULE_var_wildcard = 125
    RULE_contains_wildcard = 126
    RULE_compound_wildcard = 127
    RULE_simple_compound_wildcard = 128
    RULE_multiple_compound_wildcard = 129
    RULE_strict_mode = 130
    RULE_list_wildcard = 131

    ruleNames =  [ "single_input", "file_input", "eval_input", "decorator", 
                   "decorators", "decorated", "async_funcdef", "funcdef", 
                   "parameters", "tfpdef", "varargslist", "vfpdef", "stmt", 
                   "simple_stmts", "simple_stmt", "expr_stmt", "annassign", 
                   "testlist_star_expr", "augassign", "del_stmt", "pass_stmt", 
                   "flow_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "yield_stmt", "raise_stmt", "import_stmt", "import_name", 
                   "import_from", "import_as_name", "dotted_as_name", "import_as_names", 
                   "dotted_as_names", "dotted_name", "global_stmt", "nonlocal_stmt", 
                   "assert_stmt", "compound_stmt", "async_stmt", "if_stmt", 
                   "while_stmt", "for_stmt", "try_stmt", "with_stmt", "with_item", 
                   "except_clause", "block", "match_stmt", "subject_expr", 
                   "star_named_expressions", "star_named_expression", "case_block", 
                   "guard", "patterns", "pattern", "as_pattern", "or_pattern", 
                   "closed_pattern", "literal_pattern", "literal_expr", 
                   "complex_number", "signed_number", "signed_real_number", 
                   "real_number", "imaginary_number", "capture_pattern", 
                   "pattern_capture_target", "wildcard_pattern", "value_pattern", 
                   "attr", "name_or_attr", "group_pattern", "sequence_pattern", 
                   "open_sequence_pattern", "maybe_sequence_pattern", "maybe_star_pattern", 
                   "star_pattern", "mapping_pattern", "items_pattern", "key_value_pattern", 
                   "double_star_pattern", "class_pattern", "positional_patterns", 
                   "keyword_patterns", "keyword_pattern", "test", "test_nocond", 
                   "lambdef", "lambdef_nocond", "or_test", "and_test", "not_test", 
                   "comparison", "comp_op", "star_expr", "expr", "atom_expr", 
                   "atom", "name", "testlist_comp", "trailer", "subscriptlist", 
                   "subscript_", "sliceop", "exprlist", "testlist", "dictorsetmaker", 
                   "classdef", "arglist", "argument", "comp_iter", "comp_for", 
                   "comp_if", "encoding_decl", "yield_expr", "yield_arg", 
                   "strings", "wildcard_type", "wildcard_number", "stmt_wildcard", 
                   "expr_wildcard", "atom_wildcard", "simple_wildcard", 
                   "double_wildcard", "var_wildcard", "contains_wildcard", 
                   "compound_wildcard", "simple_compound_wildcard", "multiple_compound_wildcard", 
                   "strict_mode", "list_wildcard" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    STRING=3
    NUMBER=4
    INTEGER=5
    AND=6
    AS=7
    ASSERT=8
    ASYNC=9
    AWAIT=10
    BREAK=11
    CASE=12
    CLASS=13
    CONTINUE=14
    DEF=15
    DEL=16
    ELIF=17
    ELSE=18
    EXCEPT=19
    FALSE=20
    FINALLY=21
    FOR=22
    FROM=23
    GLOBAL=24
    IF=25
    IMPORT=26
    IN=27
    IS=28
    LAMBDA=29
    MATCH=30
    NONE=31
    NONLOCAL=32
    NOT=33
    OR=34
    PASS=35
    RAISE=36
    RETURN=37
    TRUE=38
    TRY=39
    UNDERSCORE=40
    WHILE=41
    WITH=42
    YIELD=43
    STRICT=44
    NEWLINE=45
    NAME=46
    STRING_LITERAL=47
    BYTES_LITERAL=48
    DECIMAL_INTEGER=49
    OCT_INTEGER=50
    HEX_INTEGER=51
    BIN_INTEGER=52
    FLOAT_NUMBER=53
    IMAG_NUMBER=54
    DOT=55
    ELLIPSIS=56
    STAR=57
    OPEN_PAREN=58
    CLOSE_PAREN=59
    COMMA=60
    COLON=61
    SEMI_COLON=62
    POWER=63
    ASSIGN=64
    OPEN_BRACK=65
    CLOSE_BRACK=66
    OR_OP=67
    XOR=68
    AND_OP=69
    LEFT_SHIFT=70
    RIGHT_SHIFT=71
    ADD=72
    MINUS=73
    DIV=74
    MOD=75
    IDIV=76
    NOT_OP=77
    OPEN_BRACE=78
    CLOSE_BRACE=79
    LESS_THAN=80
    GREATER_THAN=81
    EQUALS=82
    GT_EQ=83
    LT_EQ=84
    NOT_EQ_1=85
    NOT_EQ_2=86
    AT=87
    ARROW=88
    ADD_ASSIGN=89
    SUB_ASSIGN=90
    MULT_ASSIGN=91
    AT_ASSIGN=92
    DIV_ASSIGN=93
    MOD_ASSIGN=94
    AND_ASSIGN=95
    OR_ASSIGN=96
    XOR_ASSIGN=97
    LEFT_SHIFT_ASSIGN=98
    RIGHT_SHIFT_ASSIGN=99
    POWER_ASSIGN=100
    IDIV_ASSIGN=101
    WILDCARD=102
    SYNTAX_STRICT_START=103
    SKIP_=104
    UNKNOWN_CHAR=105

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Single_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(Python3Parser.NEWLINE, 0)

        def simple_stmts(self):
            return self.getTypedRuleContext(Python3Parser.Simple_stmtsContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(Python3Parser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return Python3Parser.RULE_single_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_input" ):
                listener.enterSingle_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_input" ):
                listener.exitSingle_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_input" ):
                return visitor.visitSingle_input(self)
            else:
                return visitor.visitChildren(self)




    def single_input(self):

        localctx = Python3Parser.Single_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_single_input)
        try:
            self.state = 269
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 264
                self.match(Python3Parser.NEWLINE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 265
                self.simple_stmts()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 266
                self.compound_stmt()
                self.state = 267
                self.match(Python3Parser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class File_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Python3Parser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(Python3Parser.NEWLINE)
            else:
                return self.getToken(Python3Parser.NEWLINE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Python3Parser.StmtContext)
            else:
                return self.getTypedRuleContext(Python3Parser.StmtContext,i)


        def getRuleIndex(self):
            return Python3Parser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_input" ):
                return visitor.visitFile_input(self)
            else:
                return visitor.visitChildren(self)




    def file_input(self):

        localctx = Python3Parser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 275
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Python3Parser.STRING) | (1 << Python3Parser.NUMBER) | (1 << Python3Parser.ASSERT) | (1 << Python3Parser.ASYNC) | (1 << Python3Parser.AWAIT) | (1 << Python3Parser.BREAK) | (1 << Python3Parser.CLASS) | (1 << Python3Parser.CONTINUE) | (1 << Python3Parser.DEF) | (1 << Python3Parser.DEL) | (1 << Python3Parser.FALSE) | (1 << Python3Parser.FOR) | (1 << Python3Parser.FROM) | (1 << Python3Parser.GLOBAL) | (1 << Python3Parser.IF) | (1 << Python3Parser.IMPORT) | (1 << Python3Parser.LAMBDA) | (1 << Python3Parser.MATCH) | (1 << Python3Parser.NONE) | (1 << Python3Parser.NONLOCAL) | (1 << Python3Parser.NOT) | (1 << Python3Parser.PASS) | (1 << Python3Parser.RAISE) | (1 << Python3Parser.RETURN) | (1 << Python3Parser.TRUE) | (1 << Python3Parser.TRY) | (1 << Python3Parser.UNDERSCORE) | (1 << Python3Parser.WHILE) | (1 << Python3Parser.WITH) | (1 << Python3Parser.YIELD) | (1 << Python3Parser.NEWLINE) | (1 << Python3Parser.NAME) | (1 << Python3Parser.ELLIPSIS) | (1 << Python3Parser.STAR) | (1 << Python3Parser.OPEN_PAREN))) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & ((1 << (Python3Parser.OPEN_BRACK - 65)) | (1 << (Python3Parser.ADD - 65)) | (1 << (Python3Parser.MINUS - 65)) | (1 << (Python3Parser.NOT_OP - 65)) | (1 << (Python3Parser.OPEN_BRACE - 65)) | (1 << (Python3Parser.AT - 65)) | (1 << (Python3Parser.WILDCARD - 65)))) != 0):
                self.state = 273
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [Python3Parser.NEWLINE]:
                    self.state = 271
                    self.match(Python3Parser.NEWLINE)
                    pass
                elif token in [Python3Parser.STRING, Python3Parser.NUMBER, Python3Parser.ASSERT, Python3Parser.ASYNC, Python3Parser.AWAIT, Python3Parser.BREAK, Python3Parser.CLASS, Python3Parser.CONTINUE, Python3Parser.DEF, Python3Parser.DEL, Python3Parser.FALSE, Python3Parser.FOR, Python3Parser.FROM, Python3Parser.GLOBAL, Python3Parser.IF, Python3Parser.IMPORT, Python3Parser.LAMBDA, Python3Parser.MATCH, Python3Parser.NONE, Python3Parser.NONLOCAL, Python3Parser.NOT, Python3Parser.PASS, Python3Parser.RAISE, Python3Parser.RETURN, Python3Parser.TRUE, Python3Parser.TRY, Python3Parser.UNDERSCORE, Python3Parser.WHILE, Python3Parser.WITH, Python3Parser.YIELD, Python3Parser.NAME, Python3Parser.ELLIPSIS, Python3Parser.STAR, Python3Parser.OPEN_PAREN, Python3Parser.OPEN_BRACK, Python3Parser.ADD, Python3Parser.MINUS, Python3Parser.NOT_OP, Python3Parser.OPEN_BRACE, Python3Parser.AT, Python3Parser.WILDCARD]:
                    self.state = 272
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 277
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 278
            self.match(Python3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Eval_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testlist(self):
            return self.getTypedRuleContext(Python3Parser.TestlistContext,0)


        def EOF(self):
